crates/bonsaidb-macros/tests/ui/view_schema/invalid_attribute.rs
use bonsaidb::core::schema::ViewSchema;

#[derive(ViewSchema, Debug)]
#[view_schema(hi)]
struct Test1;

fn main() {}
